fix(checkstyle): resolve missing braces and indentation violations
Fix 33 missing braces violations by adding curly braces to all
single-line if statements across the codebase, ensuring compliance
with Google Java Style Guide requirements.

Fix 5 indentation violations by correcting closing parentheses
alignment in multi-line method calls to match opening statement
indentation level.

Changes:
- Add braces to equals() methods in JniHotReloadManager,
  PanamaHotReloadManager, CollaborationMessage, CollaborationServer
- Add braces to guard clauses in profiling and optimization classes
- Add braces to test early-return conditions
- Add braces to counter increment conditions in test classes
- Fix method call closing parentheses indentation in
  JniExperimentalFeatures, JniAdvancedProfiler,
  PanamaExperimentalFeatures, PanamaAdvancedProfiler

Reduces checkstyle violations from 249 to ~200.